	AsynchronousSteppable.stopper() deprecated
	Documentation template examples in AsynchronousSteppable were wrong and have been
		revised (and a new one has been added).
	AsynchronousSteppable is now officially Stoppable
	ParallelSequence.cleaner() added
	DoubleDimension2D eliminated
	Modification to Heap's constructor: numElem no longer used.
	Removed Heap.extractMin(Comparable, Bag), which is confusing and no longer being used.
	Bugfix to FastValueGridPortrayal2D, which was not handling zommed-out grids properly
		when writing to high-quality (like PDF).
	Bugfix to FastHexaValueGridPortrayal2D, which was not setting the color propertly when
		writing to high-quality (like PDF).
	iFloor, iRound, iCeil made private in Utilities.java: they're probably not wise to use.
	Moved Utilities and WordWrap to sim.util.gui
	Added [Mutable]Int2D.manhattanDistance(java.awt.Point)
	Made MutableDouble2D cloneable
	Added Double2D.angle()
	Added a new Bag constructor
	Added a new Properties default factory method.  SimpleInspector now uses it.
	SimpleProperties default constructor modified so that getClass() is not included, to
		be consistent with the default Properties factory method.
	CausedRuntimeException officially deprecated
	Made GUIState(SimState) constructor public, though it matters little.
	Made GUIState.reset(...) private and deprecated.
	Removed ThreadPriority slider in Console.
	AsynchronousSteppable and ParallelSequence modified so that joins will work regardless
		of interrupts. Previously they threw errors, which is not consistent.
	Console methods no longer call doChangeCode, which is deprecated.  Methods such as 
		Console.get/SetPlaySleep(...) now lock on the playThreadLock
	Random number seeding in the Console is no longer immediately effective, but now
		always occurs immediately before playing.
	Loading from the Console no longer sets the random field to "UNKNOWN", but to the
		actual seed
	Made related random number seeding changes in SimpleController